# SInGe

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cgo/: README.md  singe_test.go
golang/singe/: singe.go  singe_test.go
simple-SDCH-gen/: CMakeLists.txt  LICENSE  Makefile  README.md  dictionary.cpp  dictionary.hpp  main.cpp  node.cpp  node.cpp~  node.hpp  node.hpp~  substring.cpp  substring.hpp  suffix_automata.cpp  suffix_automata.hpp  suffix_automaton.cpp  suffix_automaton.hpp
simple-SDCH-gen/dict/: fzip-dict  my-dict
simple-SDCH-gen/gtest/: CMakeLists.txt  dictionary_test.cpp  dictionary_test.cpp~  dictionary_test.hpp~  node_test.cpp  node_test.cpp~  node_test.hpp~  substring_test.cpp~  suffix_automaton_test.cpp  tests.cpp~
simple-SDCH-gen/train2/: b.txt  c.txt
src/: CMakeLists.txt  CTestTestfile.cmake  incremental_generator.cpp
src/dict_builder/: CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  automaton.pb.cc  automaton.pb.h  cmake_install.cmake  dictionary.cpp  dictionary.cpp~  dictionary.hpp  dictionary_test.cpp  main.cpp  node.cpp  node.cpp~  node.hpp  node_test.cpp  serialization_tests.cpp  substring.cpp  substring.hpp  suffix_automaton.cpp  suffix_automaton.hpp  suffix_automaton_test.cpp
src/dict_builder/dict/: my-dict
src/dict_builder/gtest/: suffix_automaton_test.cpp
src/dict_builder/proto/: automaton.proto
src/dict_builder/test/: earthquake.html
src/dict_builder/train/: einstein.html  entropic-gravity.html  san-francisco-giants.html
src/dict_builder/train2/: a.txt  b.txt  c.txt
src/dict_c/: CMakeLists.txt  dictionary_c.cpp  dictionary_c.h  dictionary_c_test.cpp
src/dict_encoder/: CMakeLists.txt  encoder.cpp
src/gtest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/cmake/: internal_utils.cmake
src/gtest/include/gtest/: gtest.h
src/incremental_tester/: CMakeLists.txt  CMakeLists.txt~  Makefile~  incremental_tester.cpp  incremental_tester.hpp  tester.cpp  tester.cpp~
src/incremental_tester/pages/: 10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  129.html  13.html  130.html  131.html  132.html  133.html  134.html  135.html  (+109 more)
src/incremental_updater/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  incremental_generator.cpp
src/two_dicts_tester/: CMakeLists.txt  Readme.md  tester.cpp
